<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Сателлит Online</string>
    <string name="input_font_name">roboto_regular.ttf</string>
    <string name="title_connection_lost">Нет подключения к Интернету</string>
    <string name="title_connection_found">Соединение восстановлено</string>
    <string name="space"> </string>
    <string name="gender_male">Мужской</string>
    <string name="gender_female">Женский</string>
    <string name="gender_not_specified">Пол не указан</string>
    <string name="yes_text">Да</string>
    <string name="no_text">Нет</string>
    <string name="ok_text">Ок</string>
    <string name="add_text">Добавить</string>
    <string name="cancel_text">Отмена</string>
    <string name="list_numbering_1_dot">1.</string>
    <string name="list_numbering_2_dot">2.</string>
    <string name="list_numbering_3_dot">3.</string>
    <string name="list_numbering_4_dot">4.</string>
    <string name="list_numbering_5_dot">5.</string>
    <string name="exit_dialog_title">Выйти?</string>
    <string name="exit_dialog_message">Введённые данные не будут сохранены</string>
    <string name="exit_dialog_message_changes">Изменения не будут сохранены</string>
    <string name="error_not_connection">Нет соединения</string>
    <string name="error_server_not_responding_title">Сервер недоступен</string>
    <string name="error_server_not_responding_subtitle">Приносим свои извинения за принесенные неудобства</string>
    <string name="error_server_not_responding_retry_button">Повторить</string>
    <string name="error_server_not_responding_snackbar_message">Сервер временно недоступен</string>
    <string name="error_something_went_wrong">Что-по пошло не так, попробуйте позже</string>
    <string name="greeting_registration">Регистрация</string>
    <string name="greeting_title">Добро\nпожаловать!</string>
    <string name="greeting_message">Управляй диабетом вместе\nС устройствами Сателлит</string>
    <string name="greeting_menu_action">У вас уже есть аккаунт?</string>
    <string name="registration_main_toolbar_button_text">У вас уже есть аккаунт?</string>
    <string name="registration_main_title_new_user">Новый пользователь</string>
    <string name="registration_main_subtitle">Пожалуйста, введите email и пароль для вашего будущего аккаунта</string>
    <string name="registration_main_email_hint">Ваш email</string>
    <string name="registration_main_password_hint">Пароль</string>
    <string name="registration_main_description_privacy_policy">Я ознакомлен и согласен с условиями\nлицензионного договора и политики\nобработки персональных данных, а также\nдаю согласие на обработку персональных\nданных</string>
    <string name="registration_main_privacy_policy_clickable_mask">лицензионного договора и политики обработки персональных данных</string>
    <string name="registration_main_personal_data_clickable_mask">согласие на обработку персональных данных</string>
    <string name="registration_main_button_continue">Продолжить</string>
    <string name="registration_privacy_policy">https://stage2.vdiabete.com/privacy_policy.html</string>
    <string name="registration_personal_data">https://stage2.vdiabete.com/personal_data.html</string>
    <string name="registration_privacy_policy_toolbar_title">Privacy policy terms of use</string>
    <string name="registration_activate_title">Активируйте\nпрофиль</string>
    <string name="registration_activate_description">Письмо отправлено на указанный адрес электронной почты. Откройте его и перейдите по ссылке для активации.\n\nЕсли вы не получили данное письмо, проверьте папки «Спам»</string>
    <string name="registration_activation_check">Активировал</string>
    <string name="registration_send_again">Отправить письмо повторно</string>
    <string name="registration_error_input_email">Введите, пожалуйста, корректный email</string>
    <string name="registration_error_email_already_registered">Внимание! Указанный email уже существует.</string>
    <string name="registration_error_same_email">Данный пользователь уже является вашим наблюдателем</string>
    <string name="registration_error_same_email_awaiting">Данному пользователю уже отправлено приглашение</string>
    <string name="registration_error_current_user_email">Невозможно отправить на свой email</string>
    <string name="registration_error_input_password">Некорректный пароль</string>
    <string name="registration_password_pattern">Не менее 8 символов (A–Z, a–z, 0–9)</string>
    <string name="registration_password_the_same">Придумайте новый пароль</string>
    <string name="registration_email_confirmation_title">Аккаунт верифицирован</string>
    <string name="registration_email_confirmation_subtitle">Ваш аккаунт успешно верифицирован. Чтобы использовать этот аккаунт, необходимо войти в систему используя ваш email и пароль.</string>
    <string name="registration_email_confirmation_continue_button">Продолжить работу</string>
    <string name="registration_email_confirmation_login_button">Войти</string>
    <string name="registration_email_sent">Письмо отправлено</string>
    <string name="registration_social_title">Приветствуем, %s</string>
    <string name="registration_social_title_no_name">Приветствуем</string>
    <string name="registration_social_subtitle">Осталось ввести email и пароль для вашего\nбудущего аккаунта</string>
    <string name="auth_toolbar_button_text">Забыли пароль?</string>
    <string name="auth_title">С возвращением!</string>
    <string name="auth_subtitle">Чтобы продолжить, введите ваш email\nи пароль от аккаунта</string>
    <string name="auth_button_continue">Войти</string>
    <string name="auth_email_and_password_not_correct">Некорректный email или пароль</string>
    <string name="auth_password_recovery_title">Восстановление пароля</string>
    <string name="auth_password_recovery_subtitle">Введите email, указанный при регистрации аккаунта в нашем приложении</string>
    <string name="auth_password_recovery_email_hint">Ваш email</string>
    <string name="auth_password_recovery_email_description">После отправки запроса на вашу почту будет выслана инструкция для восстановления пароля</string>
    <string name="auth_password_recovery_button_text">Отправить запрос на email</string>
    <string name="auth_password_recover_error_input_email">Некорректный email</string>
    <string name="auth_password_create_title">Новый пароль</string>
    <string name="auth_password_create_subtitle">Придумайте новый пароль для входа в приложение</string>
    <string name="auth_password_create_password_hint">Пароль</string>
    <string name="auth_password_create_login_button_title">Сохранить и войти</string>
    <string name="auth_password_create_error_input_password">Некорректный пароль</string>
    <string name="auth_password_create_password_pattern">Не менее 8 символов (A–Z, a–z, 0–9)</string>
    <string name="auth_password_create_message_changed_success">Пароль успешно изменен</string>
    <string name="auth_password_create_invalid_link">В ссылке отсутствует код восстановления. Откройте ссылку из письма или запросите новую.</string>
    <string name="auth_show_password">Показать пароль</string>
    <string name="auth_hide_password">Скрыть пароль</string>
    <string name="on_boarding_toolbar_menu_button">Пропустить этот шаг</string>
    <string name="on_boarding_subtitle">Давайте знакомиться</string>
    <string name="on_boarding_header_emias_account">Привяжите аккаунт ЕМИАС</string>
    <string name="on_boarding_header_user_sex">Укажите ваш пол</string>
    <string name="on_boarding_header_user_weight">Какой у вас вес?</string>
    <string name="on_boarding_header_user_diabetes_type">Какой у вас тип диабета?</string>
    <string name="on_boarding_header_user_glucose_format">В каком формате отображать уровень глюкозы?</string>
    <string name="on_boarding_prev_button_title">Назад</string>
    <string name="on_boarding_next_button_title">Далее</string>
    <string name="diabetes_type_first">1 тип</string>
    <string name="onboarding_diabetes_unknown">Не знаю</string>
    <string name="onboarding_diabetes_none">Нет диабета</string>
    <string name="diabetes_type_second">2 тип (лечение инсулином)</string>
    <string name="diabetes_type_second_tablets">2 тип (лечение таблетками)</string>
    <string name="diabetes_type_second_short">2 тип (Инсулин)</string>
    <string name="diabetes_type_second_tablets_short">2 тип (Таблетки)</string>
    <string name="coma">,</string>
    <string name="emias_notification_for_moscow">Доступно только для жителей Москвы</string>
    <string name="emias_notification_account_connected">Аккаунт ЕМИАС привязан к вашему профилю Сателлит Online</string>
    <string name="emias_profile_unlink">Отвязать аккаунт</string>
    <string name="emias_save_button">Сохранить</string>
    <string name="on_boarding_emias_text">При включенной привязке данные измерений с глюкометра автоматически передаются вашему лечащему врачу через систему ЕМИАС.</string>
    <string name="on_boarding_emias_helper">Значение должно быть между 9 и 16 знаками</string>
    <string name="on_boarding_emias_hint">Номер полиса ОМС</string>
    <string name="on_boarding_emias_date_birth_hint">Дата рождения</string>
    <string name="on_boarding_glucose_format_help_header">Обратите внимание!</string>
    <string name="on_boarding_glucose_format_help_text1">Значения уровня глюкозы на экране глюкометра указаны в цельной капиллярной крови, что соответствует формату «В цельной капиллярной крови».</string>
    <string name="on_boarding_glucose_format_help_text2">Если вы привыкли ориентироваться на замеры глюкозы в плазме, то выберите этот вариант.</string>
    <string name="on_boarding_glucose_format_help_text3">Значение глюкозы всегда можно изменить в <b>«Настройки профиля»</b>, выбрав вкладку <b>«Формат уровня глюкозы»</b>.</string>
    <string name="bottom_navigation_menu_main_title">Главная</string>
    <string name="bottom_navigation_menu_notes_title">Дневник</string>
    <string name="bottom_navigation_menu_stats_title">Статистика</string>
    <string name="bottom_navigation_menu_profile_title">Профиль</string>
    <string name="profile_settings_save_changes">Сохранить</string>
    <string name="profile_settings_change_gender_title">Пол</string>
    <string name="profile_settings_change_gender_description">Изменение персональных данных</string>
    <string name="profile_settings_change_gender_button_not_specified">Не указан</string>
    <string name="profile_settings_change_gender_button_male">Мужской</string>
    <string name="profile_settings_change_gender_button_female">Женский</string>
    <string name="profile_glucose_format_plasma">В плазме</string>
    <string name="profile_glucose_format_caplilary">В цельной капиллярной крови</string>
    <string name="profile_device_search_not_found_connect_title">Возможные причины:</string>
    <string name="profile_device_search_not_found_disable_ble">На глюкометре выключен Bluetooth;</string>
    <string name="profile_device_search_not_found_low_energy">Батарея на устройстве отсутствует, имеет низкий заряд или полностью разряжена;</string>
    <string name="profile_device_search_not_found_out_of_range">Глюкометр находится вне зоны действия поиска.</string>
    <string name="statistic_period_seven_days">7 дней</string>
    <string name="statistic_period_fourteen_days">14 дней</string>
    <string name="statistic_period_thirty_days">30 дней</string>
    <string name="statistic_period_ninety_days">90 дней</string>
    <string name="update_app_button">Обновить приложение</string>
    <string name="update_recommended_is_available_title">Доступно обновление</string>
    <string name="update_recommended_skip_button">Пропустить</string>
    <string name="update_recommended_description">Мы добавили полезные функции и улучшили\nстабильность работы. Обновите приложение,\nчтобы перейти на новую версию.</string>
</resources>