<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/confirmationNextActionView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.elta.android.presentation.core.ui.state_view.StateWidget
            android:id="@+id/confirmationSuccessStateView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:state_button="@string/registration_email_confirmation_continue_button"
            app:state_description="@string/registration_email_confirmation_subtitle"
            app:state_icon="@drawable/ic_send_mail"
            app:state_title="@string/registration_email_confirmation_title" />

    </LinearLayout>

    <com.elta.android.presentation.core.ui.state_view.StateWidget
        android:id="@+id/errorStateView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:state_button="@string/error_server_not_responding_retry_button"
        app:state_description="@string/error_server_not_responding_subtitle"
        app:state_icon="@drawable/ic_server_error"
        app:state_title="@string/error_server_not_responding_title" />

</FrameLayout>