<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="android.widget.FrameLayout">

    <LinearLayout
        android:id="@+id/periodsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/periodSevenDaysView"
            style="@style/PeriodView"
            android:text="@string/statistic_period_seven_days" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/periodFourteenDaysView"
            style="@style/PeriodView"
            android:text="@string/statistic_period_fourteen_days" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/periodThirtyDaysView"
            style="@style/PeriodView"
            android:text="@string/statistic_period_thirty_days" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/periodNinetyDaysView"
            style="@style/PeriodView"
            android:text="@string/statistic_period_ninety_days" />

    </LinearLayout>
</merge>


