<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/layout_auth_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.elta.android.presentation.core.ui.state_view.StateWidget
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:state_button="@string/registration_main_button_continue"
        app:state_description="@string/registration_activate_description"
        app:state_icon="@drawable/ic_activation"
        app:state_title="@string/registration_activate_title" />

</LinearLayout>