<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTextView"
                style="@style/New.Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_settings_change_gender_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionTextView"
                style="@style/New.Title2.ShadeBlack0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_settings_change_gender_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView">

                <RadioButton
                    android:id="@+id/notSpecifiedButtonView"
                    style="@style/Button.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/profile_settings_change_gender_button_not_specified" />

                <RadioButton
                    android:id="@+id/maleButtonView"
                    style="@style/Button.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/profile_settings_change_gender_button_male" />

                <RadioButton
                    android:id="@+id/femaleButtonView"
                    style="@style/Button.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/profile_settings_change_gender_button_female" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/continueButtonView"
        style="@style/Button.Large"
        android:enabled="false"
        android:text="@string/profile_settings_save_changes"
        android:visibility="visible" />
</LinearLayout>