<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="android.widget.FrameLayout">

    <LinearLayout
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="horizontal">

        <com.elta.android.presentation.widgets.BottomNavigationMenuItem
            android:id="@+id/mainMenuItemView"
            style="@style/BottomNavigationMenuItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bnm_icon="@drawable/ic_menu_home_2"
            app:bnm_title="@string/bottom_navigation_menu_main_title" />

        <com.elta.android.presentation.widgets.BottomNavigationMenuItem
            android:id="@+id/notesMenuItemView"
            style="@style/BottomNavigationMenuItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bnm_icon="@drawable/ic_menu_note_2"
            app:bnm_title="@string/bottom_navigation_menu_notes_title" />

        <Space
            android:layout_width="96dp"
            android:layout_height="match_parent" />

        <com.elta.android.presentation.widgets.BottomNavigationMenuItem
            android:id="@+id/statsMenuItemView"
            style="@style/BottomNavigationMenuItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bnm_icon="@drawable/ic_menu_stats_2"
            app:bnm_title="@string/bottom_navigation_menu_stats_title" />

        <com.elta.android.presentation.widgets.BottomNavigationMenuItem
            android:id="@+id/profileMenuItemView"
            style="@style/BottomNavigationMenuItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bnm_icon="@drawable/ic_menu_profile_2"
            app:bnm_title="@string/bottom_navigation_menu_profile_title" />
    </LinearLayout>

</merge>
